drivers-java-ee/deployment/kubernetes.yaml
kind: Service
apiVersion: v1
metadata:
  name: drivers
  labels:
    app: drivers
spec:
  selector:
    app: drivers
  ports:
    - port: 8080
      name: http
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: drivers
spec:
  replicas: 1
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true"    
      labels:
        app: drivers
        version: v1
    spec:
      containers:
      - name: drivers
        image: 172.30.1.1:5000/race-manager/drivers:1
        ports:
        - containerPort: 8080
        livenessProbe:
          exec:
            command: ["sh", "-c", "curl -s http://localhost:8080/"]
          initialDelaySeconds: 20
        readinessProbe:
          exec:
            command: ["sh", "-c", "curl -s http://localhost:8080/health | grep -q drivers"]
          initialDelaySeconds: 40
      restartPolicy: Always
---
