drivers-java-ee/deployment/istio.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: drivers
spec:
  hosts:
  - drivers
  http:
  - route:
    - destination:
        host: drivers
        subset: v1
---

apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: drivers
spec:
  host: drivers
  subsets:
  - name: v1
    labels:
      version: v1
---
